mobile: fixed jumping bug of userpic and timestamp lazy-image: ovveride for deprecation

--- a/app/styles/components/single-post/single-post.scss
+++ b/app/styles/components/single-post/single-post.scss
@@ -24,6 +24,7 @@
     }
   }
   .user{
+    white-space: nowrap;
     object{
       &:before{
         position: relative;
@@ -57,8 +58,7 @@ margin: 15px 0;
 word-wrap: break-word;
 background-color: #fff;
   .time, .linkToPost{
-    position: absolute;
-    right: 10px;
+    float: right;
     padding: 5px;
   }
   .linkToPost {
